<resources>
    <string name="app_name">Hangry</string>
    <string name="search_results_page_title">Search Results</string>
    <string name="search_history_page_title">Search History</string>
    <string name="search_text_hint">Enter search terms...</string>
    <string name= "nav_contact_info">For assistance, contact: hangry_support@plip.com</string>
    <string name="nav_header">Hangry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Fragment_Search Strings-->
    <string name="addItemBTN">Add Item</string>
    <string name="searchBTN">Search</string>
    <string name="allergiesBTN">Allergies</string>
    <string name="cuisineBTN">Cuisine</string>
    <string name="mealBTN">Meal</string>


    <!--Allergy display strings-->
    <style name="none"></style>
    <string name="dairyAllergy">Dairy</string>
    <string name="eggAllergy">Egg</string>
    <string name="glutenAllergy">Gluten</string>
    <string name="peanutAllergy">Peanut</string>
    <string name="sesameAllergy">Sesame</string>
    <string name="seafoodAllergy">Seafood</string>
    <string name="shellfishAllergy">Shellfish</string>
    <string name="soyAllergy">Soy</string>
    <string name="sulfiteAllergy">Sulfite</string>
    <string name="treenutAllergy">Tree Nut</string>
    <string name="wheatAllergy">Wheat</string>

    <!--Meals display strings-->
    <string name="mainCourseButton">Main Course</string>
    <string name="sideDishButton">Side Dish</string>
    <string name="dessertButton">Dessert</string>
    <string name="appetizerButton">Appetizer</string>
    <string name="saladButton">Salad</string>
    <string name="breakfastButton">Breakfast</string>
    <string name="beverageButton">Beverage</string>

    <!-- Cuisine display strings -->
    <string name="africanCuisine">African</string>
    <string name="chineseCuisine">Chinese</string>
    <string name="japaneseCuisine">Japanese</string>
    <string name="indianCuisine">Indian</string>
    <string name="frenchCuisine">French</string>
    <string name="italianCuisine">Italian</string>
    <string name="mexicanCuisine">Mexican</string>
    <string name="middleEasternCuisine">Middle Eastern</string>
    <string name="jewishCuisine">Jewish</string>
    <string name="americanCuisine">American</string>
    <string name="southernCuisine">Southern</string>
    <string name="caribbeanCuisine">Caribbean</string>


    <!-- Tab character for user in textview -->
    <string name="tab">\u0009</string>

    <!-- Stephanie's Strings-->
    <string name="ingr_box">What ingredients do you have?</string>
    <string name="recipe">What are you cooking?</string>

    <string-array  name="nav_drawer_items">
        <item> Inventory </item>
        <item> Recipe History </item>
        <item> Recipe Results </item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_menu_gallery</item>
        <item>@drawable/ic_menu_slideshow</item>
        <item>@drawable/ic_menu_camera</item>
    </array>

</resources>
