<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".viewcontroller.fragment.SearchFragment"
    android:gravity="center">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredientRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="50dp"
        android:textAlignment="center"
        android:longClickable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:fontFamily="helvetica"
        android:gravity="center"
        android:textSize="35sp"
        android:paddingTop="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:layout_weight="1"
            android:hint="@string/search_text_hint"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

    <Button
        android:id="@+id/addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addItemBTN"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_marginRight="3dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:text="@string/searchBTN"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_marginLeft="3dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/lastSearchedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" />
</LinearLayout>